Added per tenant ingredients
